remove deprecated boxing call